--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Index - Criterion.rs</title>
+    <title>atoi_simd benchmark</title>
     <style type="text/css">
         body {
             font: 14px Helvetica Neue;
@@ -61,7 +61,7 @@
 
 <body>
     <div class="body">
-        <h2>Criterion.rs Benchmark Index</h2>
+        <h2>atoi_simd Benchmark</h2>
         See individual benchmark pages below for more details.
         <ul>
             <li><a href="report/index.html">benchmark</a></li>
